API criada com interação com o azure devops e com a IA local

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,9 @@
 azure.devops.organization=InstantSoft
 azure.devops.project=Auditeste
 azure.devops.token=securitykey
+quarkus.http.cors=true
+quarkus.http.cors.origins=*
+ # http://localhost:3000
+quarkus.http.cors.methods=GET, POST, PUT, DELETE, OPTIONS
+quarkus.http.cors.headers=accept, authorization, content-type, origin, x-requested-with
+quarkus.rest-client."mvp.service.OllamaService".url=http://localhost:11434
