Atualiza chave no docker

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ quarkus.http.cors.origins=*
 quarkus.http.cors.methods=GET, POST, PUT, DELETE, OPTIONS
 quarkus.http.cors.headers=accept, authorization, content-type, origin, x-requested-with
 quarkus.rest-client."mvp.service.OllamaService".url=http://localhost:11434
+azure.devops.pat=${AZURE_DEVOPS_PAT}
