--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,4 @@ services:
       - "8080:8080"
     environment:
       - JAVA_OPTS=-Dquarkus.http.host=0.0.0.0
+      - AZURE_DEVOPS_PAT=${AZURE_DEVOPS_PAT}
