ajuste no azure para ficar o processo por projeto e iniciando o swagger no projeto

--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,17 @@
             <version>0.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-smallrye-openapi</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-swagger-ui</artifactId>
+        </dependency>
+
+
     </dependencies>
 
 
